--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,16 @@
-streamlit==1.43.2
-Flask==2.2.5
-gunicorn==23.0.0
+streamlit
+Flask
+gunicorn
 
-opencv-python==4.11.0.86
-deepface==0.0.93
-tf-keras==2.17.0
-tensorflow==2.17.0
-retina-face==0.0.17
+opencv-python
+deepface
+tf-keras
+retina-face
 
-SpeechRecognition==3.14.3
-pyttsx3==2.99
-pyaudio==0.2.14
-sounddevice==0.5.3
-soundfile==0.13.1
+SpeechRecognition
+pyttsx3
+sounddevice
+soundfile
 
-textblob==0.19.0
-numpy==2.2.3
-pandas==2.2.3
-scikit-learn==1.6.1
-
-requests==2.32.3
-protobuf==5.29.4
-Werkzeug==3.1.3
+textblob
+requests
